# vko2-3harj

ohjelmistojen-ypt-main/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
ohjelmistojen-ypt-main/palvelin/: __init__.py  pages.py  server.py
ohjelmistojen-ypt-main/palvelin_tests/: test_server.py
ohjelmistojen-ypt-main/tiedostot/: harj1.md  harj2.md
